# monahinga-hunter

./: .env  FIRST_TIME_SETUP.bat  MONAHINGA_LAUNCH_PACKAGE.md  PASS2_CHANGE_NOTE.txt  PATCH_NOTE.txt  README.md  README_FINAL_POLISH.txt  README_INSTALL.txt  README_PASS_A.txt  README_PASS_E.txt  README_PAYWALL.txt  README_PAYWALL_REPAIR.txt  README_TERRAIN_ATMOSPHERE.txt  SMOKE_TEST_MONAHINGA.bat  START_MONAHINGA_SERVER.bat  apply_invisible_approach_pass2_patch.py  apply_invisible_approach_template_patch.py  main.py  monahinga_button_layout_cleanup_safe_patch.py  pyproject.toml  remove_species_dropdown.py
apps/api/: main - Copy.py  main.py  render_start.py
config/: providers.yaml
engine/: species_profiles.py
engine/adapters/: monahinga_run_folder_adapter.py
engine/command_surface/: __init__.py  config.py  payloads.py  render.py  template.py  template.py.backup_button_cleanup  template.py.bak_invisible_approach_pass2  template.py.before_invisible_approach
engine/decision/: build.broken_backup.py  build.pre_boundary_hunt_backup.py  build.pre_legal_confidence_backup.py  build.pre_legality_gate_backup.py  build.pre_sanity_gate_backup.py  (+3 more)
hunter_core/: __init__.py  engine.py  scoring.py  zones.py
monahinga_vnext.egg-info/: SOURCES.txt  requires.txt
tests/: test_bbox_authority.py  test_command_surface_template.py  test_command_surface_ui.py  test_hunting_blend_ui.py  test_landform_practical_huntability.py  test_live_adapters.py  test_run_artifacts.py  test_terrain_derivatives.py  test_us_only_launch_surface.py  test_worldwide_fallbacks.py
tools/: smoke_test.py
(+57 files in other folders)
